# dbt-extractor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.py  example-file  extractor.py  grammar.js  jsonify.sh  main.py  package-lock.json  package.json  parser.py  parser_misses.py  pyproject.toml  requirements.txt  test.sh  timing.py  toast.yml  type_check.py  unit-test.sh  watch-test.sh  watch.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  implementation-ticket.yml  regression-report.yml
.github/workflows/: ci.yml  release.yml
dbt-parser/: .gitignore  grammar.js  package-lock.json  setup.py  tree-sitter-dbt_jinja.wasm
dbt-parser/dbt_parser/: __init__.py
dbt-parser/test/corpus/: dict_tests.txt  macro_block_tests.txt  misc_tests.txt
demo/: Cargo.toml  demo.html  style.css
demo/src/: main.rs
docs/arch/: adr-001-prop-test-library.md
docs/release/: release_process.md
src/: compiler.py  demo_server.py  exceptions.rs  extractor.rs  grammar.json  lib.rs  main.py  main.rs  node-types.json  parse_results.py  parser.c  parser_misses.py  python.rs  type_check.py
src/dbt_jinja/: compiler.py
src/scripts/: demo_server.py  main.py  parse_results.py  parser_misses.py
test/corpus/: columns.txt  select.txt  select_body.txt
tests/: integration_tests.rs  law_tests.rs  test_compiler.py  test_extractor.py  test_parse_results.py  test_transformations.py  test_type_checker.py
tests/dbt_jinja/: test_extractor.py  test_transformations.py  test_type_checker.py
tests/scripts/: test_parse_results.py
tree-sitter-dbt-jinja/: .gitignore  Cargo.toml  example-file  grammar.js  package-lock.json  package.json
tree-sitter-dbt-jinja/src/: grammar.json  node-types.json  parser.c
tree-sitter-dbt-jinja/test/corpus/: all_tests.txt  comment_tests.txt  dict_tests.txt  fn_call_tests.txt  list_tests.txt  macro_block_tests.txt  misc_tests.txt  string_tests.txt
tree-sitter-sql/: README.md  example-file  tree-sitter-sql.wasm
tree-sitter-sql/scripts/: README.md  test.sh  watch.sh
tree-sitter-sql/src/: grammar.json  node-types.json  parser.c
tree-sitter-sql/test/corpus/: case.txt  casting.txt  expressions.txt  functions.txt  joins.txt  subqueries.txt
ui/: demo.html
