[package]
name = "dbt-extractor"
version = "0.5.1"
description = "A tool to analyze and extract information from Jinja used in dbt projects."
authors = [
  "Nathaniel May <nathaniel.may@dbtlabs.com>",
  "Peter Webb <peter.webb@dbtlabs.com>",
  "dbt Labs <info@dbtlabs.com>",
]
edition = "2018"
homepage = "https://github.com/dbt-labs/dbt-parser-generator/"
repository = "https://github.com/dbt-labs/dbt-parser-generator/"
publish = false
license = "Apache-2.0"

[lib]
name = "dbt_extractor"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["abi3-py38", "extension-module"] }
rayon = "1.5.1"
tree-sitter = "0.20.8"
tree-sitter-jinja2 = { git = "https://github.com/dbt-labs/tree-sitter-jinja2", tag = "v0.2.0" }
thiserror = "1.0.25"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
