[package]
name = "dbt-extractor"
version = "0.6.0"
description = "A tool to analyze and extract information from Jinja used in dbt projects."
authors = [
  "Nathaniel May <nathaniel.may@dbtlabs.com>",
  "Peter Webb <peter.webb@dbtlabs.com>",
  "dbt Labs <info@dbtlabs.com>",
]
edition = "2018"
homepage = "https://github.com/dbt-labs/dbt-parser-generator/"
repository = "https://github.com/dbt-labs/dbt-parser-generator/"
publish = false
license = "Apache-2.0"

[lib]
name = "dbt_extractor"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["abi3-py39", "extension-module"] }
rayon = "1.5.1"
tree-sitter = "0.25.6"
tree-sitter-jinja2 = { git = "https://github.com/dbt-labs/tree-sitter-jinja2", tag = "v0.2.0" }
thiserror = "2.0.12"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
