[package]
name = "demo"
version = "0.1.0"
authors = ["Nathaniel May <nathaniel.may@dbtlabs.com>"]
edition = "2018"

[dependencies]
dbt-extractor = { path = ".." }
tide = "0.15.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
